--- a/escape/server/html/mastermind.html
+++ b/escape/server/html/mastermind.html
@@ -5,33 +5,39 @@
 <body>
     <h1>{{.Title}}</h1>
     <div class="dotrow">
-        <div class="gray dot"></div>
-        <div class="gray dot"></div>
-        <div class="gray dot"></div>
-        <div class="gray dot"></div>
-        <div class="gray dot"></div>
-        <div class="gray dot"></div>
+        <div class="E dot">1</div>
+        <div class="E dot">3</div>
+        <div class="E dot">8</div>
+        <div class="E dot">4</div>
+        <div class="E dot">7</div>
+        <div class="E dot">9</div>
     </div><br>
-    <div class="dotrow">
+    <div class="dotrow legend">
         <div class="R dot">R</div>
         <div class="Y dot">Y</div>
         <div class="B dot">B</div>
         <div class="G dot">G</div>
         <div class="P dot">P</div>
         <div class="T dot">T</div>
+        <div class="V dot">V</div>
+        <div class="S dot">S</div>
     </div>
     <br>
-
+    
+    <form action="/logik-guess" method="POST">
+        <div class="submitrow">
+            <div class="textinput"><input type="text" name="body" size="6"></div>
+            <div class="submitbutton"><input type="submit" value="Guess"></div>
+        </div>
+    </form>
     <!-- Guess history -->
     {{range $guess := .GuessHistory}}
-        {{range $color := $guess.Configuration}}
-        <div class="{{$color}} dot"></div>
-        {{end}} {{$guess.Black}} {{$guess.White}}<br>
+        <div class="dotrow">
+            {{range $color := $guess.Configuration}}
+                <div class="{{$color}} dot"></div>
+            {{end}} {{$guess.Black}} {{$guess.White}}<br>
+        </div>
     {{end}}
-    <form action="/logik/guess" method="POST">
-    <div><textarea name="body" rows="1" cols="15"></textarea></div>
-    <div><input type="submit" value="Guess"></div>
-    </form>
-    {{if .Win}} VICTORY!! {{end}}
+    {{if .Win}} <div id="victory">VICTORY!!</div> {{else}} <div id="note">configuration in format [RYBGPT]{6}"</div> {{end}}
 </body>
 </html>
