--- a/escape/server/html/mastermind.html
+++ b/escape/server/html/mastermind.html
@@ -37,6 +37,6 @@
             {{end}} {{$guess.Black}} {{$guess.White}}<br>
         </div>
     {{end}}
-    {{if .Win}} <div id="victory">VICTORY!!</div> {{else}} <div id="note">configuration in format [RYAGBKOW]{6}"</div> {{end}}
+    {{if .Win}} <div id="victory">VICTORY!!</div> {{else}} <div id="note">configuration in format [RYAGBKOW]{6}</div> {{end}}
 </body>
 </html>
